--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
+html, body {
+    height: 100%;
+    background-color: blue;
+}
 .main-container {
-    margin: auto;
-    padding: 0;
     height: 800px;
     width: 800px;
-    border-style: solid;
-    border-color: red;
+    background-color: white;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.box-grid {
+    box-sizing: border-box;
+    border: 1px solid black;
+    background-color: blueviolet;
     
 }
