--- a/style.css
+++ b/style.css
@@ -13,6 +13,6 @@ html, body {
 .box-grid {
     box-sizing: border-box;
     border: 1px solid black;
-    background-color: blueviolet;
+    background-color: white;
     
 }
