--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
-html, body {
+body {
     height: 100%;
     background-color: blue;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
 .main-container {
     height: 800px;
     width: 800px;
     margin: auto;
-    background-color: white;
+    background-color: blue;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -16,4 +21,8 @@ html, body {
     border: 1px solid black;
     background-color: white;
     
+}
+
+button {
+    max-width: 150px;
 }
