--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     height: 100%;
-    background-color: blue;
+    background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,6 +16,7 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
 }
 
 .box-grid {
